runtime/main.css
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  font-size: inherit;
  font-family: inherit;
  line-height: 1;
}

body {
  background: white;
}

#err {
  font-family: monospace;
  position: fixed;
  bottom: 1em;
  right: 1em;
  border-radius: 1em;
  max-width: 100%;
  background: #1e1e2e;
  color: #f38ba8;
}
#err:not(:empty) {
  padding: 1em;
}

#typ > svg {
  width: 100%;
}

#cm {
  width: 1cm;
  height: 1cm;
  font-size: 0;
  color: transparent;
  background: transparent;
  position: fixed;
  pointer-events: none;
  top: 0;
  left: 0;
}

input,
.swp {
  background: transparent;
  border: none;
  resize: none;
  overflow-y: hidden;
  position: fixed;
  display: flex;
}
input:focus,
.swp:focus {
  outline: none;
}

input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
  -webkit-appearance: none;
}
input[type="number"] {
  -moz-appearance: textfield;
}

button,
input[type="checkbox"] {
  opacity: 0;
  cursor: pointer;
}

